--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <div class="main-container">
+  <div *ngIf="showLoader | async" class="loader-container">
+    <mat-spinner></mat-spinner>
+  </div>
+
   <router-outlet></router-outlet>
 </div>
