--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,4 +2,16 @@
   width: 100vw;
   height: 100vh;
   margin: 0;
+  position: relative;
+
+  .loader-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: #000000, $alpha: .3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+  }
 }
