implement add todo

--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -16,8 +16,8 @@
           <button type="button" class="list-item__del-icon" (click)="deleteTodo(todo._id)">
             <i class="fas fa-times fa-sm"></i>
           </button>
-          <span class="list-item__title" [ngClass]="{'completed': todo.completed}"
-            [routerLink]="['./Add', {edit: true}]">
+          <span class="list-item__title" [ngClass]="{'completed': todo.completed}" routerLink="./Add"
+            [queryParams]="{edit: true, id: todo._id}">
             {{todo.content}}
           </span>
         </div>
@@ -30,7 +30,7 @@
       </li>
     </ul>
 
-    <button type="button" class="card-main__add-btn">
+    <button type="button" class="card-main__add-btn" routerLink="./Add">
       <i class="fas fa-plus fa-3x" style="color: white"></i>
     </button>
   </div>
