--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,15 @@
     <mat-spinner></mat-spinner>
   </div>
 
+  <div class="lang-container">
+    <button mat-button [matMenuTriggerFor]="menu">
+      <mat-icon>language</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="translate.changeLang('en')">English</button>
+      <button mat-menu-item (click)="translate.changeLang('fa')">فارسی</button>
+    </mat-menu>
+  </div>
+
   <router-outlet></router-outlet>
 </div>
