--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -6,8 +6,7 @@
   </div>
   <div class="card-main">
     <h2 class="card-main__title">
-      <!-- <span>{{'card.TITLE' | translate}}</span> -->
-      <span>ToDo</span>
+      <span>{{'card.TITLE' | translate}}</span>
     </h2>
 
     <ul class="card-main__list">
@@ -31,7 +30,7 @@
     </ul>
 
     <button type="button" class="card-main__add-btn" routerLink="./Add">
-      <i class="fas fa-plus fa-3x" style="color: white"></i>
+      <mat-icon style="transform: scale(3)">add</mat-icon>
     </button>
   </div>
 </div>
