--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,10 @@ body {
   font-family: 'IRANSans', 'Montserrat', sans-serif;
 }
 
+button {
+  outline: none;
+}
+
 .snackbar-warning {
   background: #FFCD07;
 
